--- a/StockPortfolio/StockPortfolio.csproj
+++ b/StockPortfolio/StockPortfolio.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1039999" />
     <PackageReference Include="linqtotwitter" Version="5.0.0" />
     <PackageReference Include="System.Reactive" Version="4.1.5" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
