--- a/StockPortfolio.Android/StockPortfolio.Android.csproj
+++ b/StockPortfolio.Android/StockPortfolio.Android.csproj
@@ -64,6 +64,10 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
+    <None Include="Resources\iconhome.png" />
+    <None Include="Resources\iconsearch.png" />
+    <None Include="Resources\icontwitter.png" />
+    <None Include="Resources\iconuser.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.axml" />
