--- a/StockPortfolio/StockPortfolio.csproj
+++ b/StockPortfolio/StockPortfolio.csproj
@@ -30,8 +30,10 @@
     <PackageReference Include="linqtotwitter" Version="5.0.0" />
     <PackageReference Include="System.Reactive" Version="4.1.5" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="View\" />
   </ItemGroup>
 </Project>
